--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "cra-template": "1.2.0",
     "nosleep.js": "^0.12.0",
     "react": "^19.0.0",
+    "react-calendar": "^5.1.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
     "react-scripts": "5.0.1",
