--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "nosleep.js": "^0.12.0",
     "react": "^19.0.0",
     "react-calendar": "^5.1.0",
+    "react-countdown": "^2.3.6",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
     "react-scripts": "5.0.1",
+    "react-timer-hook": "^3.0.8",
     "redux-persist": "^6.0.0",
     "uuid": "^11.0.5",
     "uuidv4": "^6.2.13"
