--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,18 +1,18 @@
 {
     "name": "Get It Done",
     "short_name": "Pomodoro",
-    "start_url": "/",
+    "start_url": "http://stefan0712.github.io/get-it-done",
     "display": "standalone",
     "background_color": "#ffffff",
     "theme_color": "#000000",
     "icons": [
         {
-            "src": "/icons/icon-192x192.png",
+            "src": "logo.png",
             "sizes": "192x192",
             "type": "image/png"
         },
         {
-            "src": "/icons/icon-512x512.png",
+            "src": "logo.png",
             "sizes": "512x512",
             "type": "image/png"
         }
